--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html>
-  <head>  
-      <title>Hello</title>
+  <head>
+      <title>Makers Chat</title>
+      <link rel="stylesheet" href="/css/chat.css" media="screen" charset="utf-8">
   </head>
   <body>
       <%- body %>
